contrib/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9090"
    prometheus.io/scrape: "true"
  labels:
    app: seneye-exporter
  name: seneye-exporter
  namespace: seneye-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seneye-exporter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
      labels:
        app: seneye-exporter
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: seneye-exporter
        image: jcodybaker/seneye-exporter:d7505d8
        imagePullPolicy: Always
        name: seneye-exporter
        ports:
        - containerPort: 8080
          name: lde
          protocol: TCP
        - containerPort: 9090
          name: prom
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
